--- a/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\OBJObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -41,6 +44,9 @@
     <ClCompile Include="..\OBJObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Light.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shader.frag">
@@ -50,5 +56,11 @@
       <Filter>Source Files</Filter>
     </None>
     <None Include="packages.config" />
+    <None Include="..\lightShader.frag">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="..\lightShader.vert">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
