--- a/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj
+++ b/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Light.h" />
+    <ClInclude Include="..\Material.h" />
     <ClInclude Include="..\OBJObject.h" />
     <ClInclude Include="..\main.h" />
     <ClInclude Include="..\shader.h" />
@@ -27,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Light.cpp" />
+    <ClCompile Include="..\Material.cpp" />
     <ClCompile Include="..\OBJObject.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\shader.cpp" />
@@ -43,6 +45,7 @@
     <ProjectGuid>{EBF1E546-3F93-49DB-BD9A-B629C3C6DCB0}</ProjectGuid>
     <RootNamespace>GLFWStarterProject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <ProjectName>CSE167-HW2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
