--- a/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\Material.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Spotlight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -51,6 +54,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Material.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Spotlight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
