--- a/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/CSE167StarterCode2/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -27,10 +27,10 @@
     <ClInclude Include="..\OBJObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Light.h">
+    <ClInclude Include="..\Material.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Material.h">
+    <ClInclude Include="..\PointLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Spotlight.h">
@@ -50,13 +50,13 @@
     <ClCompile Include="..\OBJObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Light.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\Material.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Spotlight.cpp">
+    <ClCompile Include="..\PointLight.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\SpotLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
