--- a/CSE167-HW4/GLFWStarterProject/GLFWStarterProject.vcxproj
+++ b/CSE167-HW4/GLFWStarterProject/GLFWStarterProject.vcxproj
@@ -19,24 +19,28 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Cube.h" />
     <ClInclude Include="..\Geometry.h" />
     <ClInclude Include="..\Node.h" />
     <ClInclude Include="..\main.h" />
     <ClInclude Include="..\shader.h" />
+    <ClInclude Include="..\stb_image.h" />
     <ClInclude Include="..\Transform.h" />
     <ClInclude Include="..\Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Cube.cpp" />
     <ClCompile Include="..\Geometry.cpp" />
     <ClCompile Include="..\Node.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\shader.cpp" />
+    <ClCompile Include="..\stb_image.cpp" />
     <ClCompile Include="..\Transform.cpp" />
     <ClCompile Include="..\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\lightShader.frag" />
-    <None Include="..\lightShader.vert" />
+    <None Include="..\cubeShader.frag" />
+    <None Include="..\cubeShader.vert" />
     <None Include="..\shader.frag" />
     <None Include="..\shader.vert" />
     <None Include="packages.config" />
@@ -45,7 +49,7 @@
     <ProjectGuid>{EBF1E546-3F93-49DB-BD9A-B629C3C6DCB0}</ProjectGuid>
     <RootNamespace>GLFWStarterProject</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>CSE167-HW3</ProjectName>
+    <ProjectName>CSE167-HW4</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
