--- a/CSE167-HW4/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
+++ b/CSE167-HW4/GLFWStarterProject/GLFWStarterProject.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="..\Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Cube.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\main.cpp">
@@ -53,6 +59,12 @@
     <ClCompile Include="..\Node.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Cube.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shader.frag">
@@ -62,10 +74,10 @@
       <Filter>Source Files</Filter>
     </None>
     <None Include="packages.config" />
-    <None Include="..\lightShader.frag">
+    <None Include="..\cubeShader.frag">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="..\lightShader.vert">
+    <None Include="..\cubeShader.vert">
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
